k8s/pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  labels:
    app: juice-shop-app
spec:
  selector:
    matchLabels:
      app: juice-shop-app
  replicas: 2
  template:
    metadata:
      labels:
        app: juice-shop-app
    spec:
      containers:
      - name: juice-shop
        image: bkimminich/juice-shop
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        securityContext:
          privileged: true
