k8s/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
spec:
  selector:
    run: juice-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
