k8s/juice-shop.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-juice-shop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-juice-shop
  name: deployment-juice-shop
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-juice-shop
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-juice-shop
    spec:
      containers:
      - image: bkimminich/juice-shop
        imagePullPolicy: Always
        name: app-juice-shop
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-juice-shop
  name: service-juice-shop
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-juice-shop
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-juice-shop
  name: ingress-juice-shop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-juice-shop
              port:
                number: 80
