k8s/api-access-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-api-access
spec:
  podSelector:         
    matchLabels:
      run: juice-shop   
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 44.218.134.66/32
